<resources>
    <string name="app_name">MyTelegram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admin_admin">Admin Admin</string>
    <string name="online">Online</string>
    <string name="account">Account</string>
    <string name="default_number">+380123456789</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="admin">admin</string>
    <string name="username">Username</string>
    <string name="about_you">About you</string>
    <string name="write_about_you">Write about you</string>
</resources>