<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="100dp"
        android:id="@+id/settings_header"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:src="@drawable/profile"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="@dimen/settings_user_photo_width"
            android:layout_height="@dimen/settings_user_photo_height"
            android:layout_marginStart="@dimen/default_horizontal_margin"/>

        <TextView
            android:layout_width="0dp"
            android:text="@string/admin_admin"
            android:id="@+id/setting_fullName"
            android:textSize="@dimen/normalText"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/vertical_margin"
            app:layout_constraintTop_toTopOf="@id/profile_image"
            app:layout_constraintStart_toEndOf="@id/profile_image"
            android:layout_marginLeft="@dimen/default_horizontal_margin"/>

        <TextView
            android:layout_width="0dp"
            android:text="@string/online"
            android:textSize="@dimen/smallText"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorAccentDark"
            app:layout_constraintStart_toEndOf="@id/profile_image"
            app:layout_constraintTop_toBottomOf="@id/setting_fullName"
            android:layout_marginLeft="@dimen/default_horizontal_margin"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:textStyle="bold"
        android:text="@string/account"
        android:layout_width="match_parent"
        android:textSize="@dimen/smallText"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:id="@+id/settings_text_account"
        android:layout_marginTop="@dimen/vertical_large_margin"
        app:layout_constraintTop_toBottomOf="@id/settings_header"
        android:layout_marginStart="@dimen/default_horizontal_margin"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/settingsButtons"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/settings_btn_phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_text_account">

        <TextView
            style="@style/normalText"
            android:text="@string/default_number"
            android:id="@+id/settings_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings_btn_phone_number" />

        <TextView
            style="@style/smallText"
            android:text="@string/change_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/settings_label_phone_number"
            app:layout_constraintTop_toBottomOf="@id/settings_phone_number"/>

        <View
            style="@style/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_label_phone_number"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/settingsButtons"
        android:id="@+id/settings_btn_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_phone_number">

        <TextView
            style="@style/normalText"
            android:text="@string/admin"
            android:id="@+id/settings_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings_btn_username"/>

        <TextView
            style="@style/smallText"
            android:text="@string/username"
            android:id="@+id/settings_label_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_username"/>

        <View
            style="@style/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_label_username"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/settingsButtons"
        android:id="@+id/settings_btn_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_username">

        <TextView
            style="@style/normalText"
            android:id="@+id/settings_info"
            android:text="@string/about_you"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings_btn_info"/>

        <TextView
            style="@style/smallText"
            android:id="@+id/settings_label_info"
            android:text="@string/write_about_you"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_info"/>

        <View
            style="@style/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_label_info"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/change_profile_image"
        android:src="@drawable/ic_camera"
        android:background="@color/colorAccent"
        android:layout_width="@dimen/settings_change_photo_width"
        android:layout_height="@dimen/settings_change_photo_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_header"
        app:civ_border_color="@color/gray"
        app:civ_circle_background_color="@color/colorAccent"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="@id/settings_header"/>
</androidx.constraintlayout.widget.ConstraintLayout>